@@ -1,5 +1,8 @@
 Release Notes
 
+* 10/7/2015
+  * added a margin to the multiplier of disk count estimation for pmerge
+
 * 10/6/2015
   * changed JG to release the lock as soon as tasks are taken when nQueued<nQueueLimit
   * fixed lackOfJobs
